SERVER-18351 Invalidate collection after drop

This change adds code to completely remove a collection from the cache
after it has been dropped and also makes all collection drop variants
(sharded or non-sharded to go through the catalog manager).

In order to simiplify the drop code, we also no longer do shard version
checking on collection drop. This operation is done under a distributed
lock on mongos and there is no need to do shard version checking.